; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-engine.c_tl_do_object_delete.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-engine.c_tl_do_object_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_act_extra = type { i64 }
%struct.tl_object_delete = type { i32 }

@TL_BOOL_STAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_do_object_delete(%struct.tl_act_extra* %0) #0 {
  %2 = alloca %struct.tl_act_extra*, align 8
  %3 = alloca %struct.tl_object_delete*, align 8
  %4 = alloca i32, align 4
  store %struct.tl_act_extra* %0, %struct.tl_act_extra** %2, align 8
  %5 = load %struct.tl_act_extra*, %struct.tl_act_extra** %2, align 8
  %6 = getelementptr inbounds %struct.tl_act_extra, %struct.tl_act_extra* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = bitcast i8* %8 to %struct.tl_object_delete*
  store %struct.tl_object_delete* %9, %struct.tl_object_delete** %3, align 8
  %10 = load %struct.tl_object_delete*, %struct.tl_object_delete** %3, align 8
  %11 = getelementptr inbounds %struct.tl_object_delete, %struct.tl_object_delete* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @do_delete_object(i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, -2
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* @TL_BOOL_STAT, align 4
  %19 = call i32 @tl_store_int(i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = icmp sgt i32 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @tl_store_int(i32 %22)
  %24 = load i32, i32* %4, align 4
  %25 = icmp sle i32 %24, 0
  %26 = zext i1 %25 to i32
  %27 = call i32 @tl_store_int(i32 %26)
  %28 = call i32 @tl_store_int(i32 0)
  ret i32 0
}

declare dso_local i32 @do_delete_object(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @tl_store_int(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
